src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>EmailNewsroomUrl__c</fullName>
        <formula>CASE (Campus__c, 
&quot;WGU&quot;, &quot;/about_wgu&quot;, 
&quot;WGU-TX&quot;, &quot;/about_wgu_texas&quot;, 
&quot;WGU-IN&quot;, &quot;/about_wgu_inidana&quot;, 
&quot;WGU-WA&quot;, &quot;/about_wgu_washington&quot;, 
&quot;WGU-MO&quot;, &quot;/about_wgu_missouri&quot;, 
&quot;WGU-TN&quot;, &quot;/about_wgu_tennessee&quot;, 
&quot;/about_wgu&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailNewsroomUrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailScholarshipUrl__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;/tuition_financial_aid/scholarships&quot;, 
&quot;WGU-IN&quot;, &quot;/tuition_financial_aid/scholarships&quot;, 
&quot;WGU-TX&quot;, &quot;/tuition_financial_aid/scholarships&quot;, 
&quot;WGU-WA&quot;, &quot;/tuition_financial_aid/scholarships&quot;, 
&quot;/tuition_financial_aid/scholarships&quot;)</formula>
        <label>EmailScholarshipUrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailStateFull__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU-IN&quot;, &quot;Indiana&quot;, 
&quot;WGU-TX&quot;, &quot;Texas&quot;, 
&quot;WGU-WA&quot;, &quot;Washington&quot;, 
&quot;WGU-MO&quot;, &quot;Missouri&quot;, 
&quot;WGU-TN&quot;, &quot;Tennessee&quot;, 
&quot;your state&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailStateFull</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailState__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU-IN&quot;, &quot;the state of Indiana&quot;, 
&quot;WGU-TX&quot;, &quot;the state of Texas&quot;, 
&quot;WGU-WA&quot;, &quot;the state of Washington&quot;, 
&quot;WGU-MO&quot;, &quot;the state of Missouri&quot;, 
&quot;WGU-TN&quot;, &quot;the state of Tennessee&quot;, 
&quot;your state&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailState</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailStudentPortal__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;my.wgu.edu&quot;, 
&quot;WGU-IN&quot;, &quot;myindiana.wgu.edu&quot;, 
&quot;WGU-TX&quot;, &quot;mytexas.wgu.edu&quot;, 
&quot;WGU-WA&quot;, &quot;mywashington.wgu.edu&quot;, 
&quot;WGU-MO&quot;, &quot;mymissouri.wgu.edu&quot;, 
&quot;WGU-TN&quot;, &quot;mytennessee.wgu.edu&quot;, 
&quot;my.wgu.edu&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailStudentPortal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailTuitionFees__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;/tuition_financial_aid/overview&quot;, 
&quot;WGU-IN&quot;, &quot;/tuition_financial_aid/overview&quot;, 
&quot;WGU-TX&quot;, &quot;/tuition_financial_aid/overview&quot;, 
&quot;WGU-WA&quot;, &quot;/tuition_financial_aid/overview&quot;, 
&quot;/tuition_financial_aid/overview&quot;)</formula>
        <label>EmailTuitionFees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailTwitter__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;http://twitter.com/wgu&quot;, 
&quot;WGU-IN&quot;, &quot;http://twitter.com/wguindiana&quot;, 
&quot;WGU-TX&quot;, &quot;http://twitter.com/wgutexas&quot;, 
&quot;WGU-WA&quot;, &quot;http://twitter.com/wguwashington&quot;, 
&quot;WGU-MO&quot;, &quot;http://twitter.com/wgumissouri&quot;, 
&quot;WGU-TN&quot;, &quot;http://twitter.com/wgutennessee&quot;, 
&quot;http://twitter.com/wgu&quot;)</formula>
        <label>EmailTwitter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailYouTube__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;http://www.youtube.com/user/WesternGovernorsUniv&quot;, 
&quot;WGU-IN&quot;, &quot;http://www.youtube.com/wguindiana&quot;, 
&quot;WGU-TX&quot;, &quot;http://www.youtube.com/wgutexas&quot;, 
&quot;WGU-WA&quot;, &quot;http://www.youtube.com/wguwashington&quot;, 
&quot;WGU-MO&quot;, &quot;http://www.youtube.com/wgumissouri&quot;, 
&quot;WGU-TN&quot;, &quot;http://www.youtube.com/wgutennessee&quot;, 
&quot;http://www.youtube.com/user/WesternGovernorsUniv&quot;)</formula>
        <label>EmailYouTube</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeDiscountPercentage__c</fullName>
        <description>This is the emploee discount</description>
        <formula>StudentEmploymentHistory__r.Employer__r.DiscountAmount__c * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmploymentExemptionCode__c</fullName>
        <description>This will bring the employment Exemtion Code</description>
        <formula>StudentEmploymentHistory__r.Employer__r.ExemptionCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employment Exemption Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmploymentStatus__c</fullName>
        <description>Self Disclosed from the application form</description>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EnrollmentCase__c</fullName>
        <formula>HYPERLINK(&quot;/500/e?retURL=%2F500%2Fo&amp;def_account_id=&quot;&amp;Account.Id&amp;&quot;&amp;def_contact_id=&quot;&amp;StudentContact__r.Id&amp;&quot;&amp;RecordType=012a0000001ZQMH&amp;ent=Case&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Df0000002MhY1&amp;id=015a00000038kEU&quot;, &quot;Create A Case&quot;) , &quot;Enrollment Case&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrollment Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EssayPercentage__c</fullName>
        <description>Readiness Assessment - Essay Percentage</description>
        <label>Essay Percentage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EssayPoints__c</fullName>
        <description>Readiness Assessment - Essay Points</description>
        <label>Essay Points</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvalPriority__c</fullName>
        <formula>IF(  CompletedTransferEvaluations__c &gt; 0 , &quot;S&quot;,

IF(MilitaryScholarshipPriority__c = true, &quot;EM/S&quot;,

IF( LateAdd__c  = True, &quot;Late Add&quot;,

IF(ExpediteTranscriptEvaluation__c = True, &quot;EC&quot;,

IF(NOW() - TranscriptDate__c &gt;= 30, &quot;A&quot;, 

IF(NOW() - TranscriptDate__c &gt;= 15, &quot;B&quot;, 

IF(NOW() - TranscriptDate__c &gt;= 7, &quot;C&quot;, 

&quot;N&quot;)))))))</formula>
        <label>Eval Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExamplesOfIndependentLearning__c</fullName>
        <label>Examples of Independent Learning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExcludeFromEloqua__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the Prospect needs to be excluded from Eloqua, select this field.</inlineHelpText>
        <label>Exclude From Eloqua</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExemptionCode__c</fullName>
        <description>Decides whether or not the discount used the transfer or not.</description>
        <formula>if  (EmployeeDiscountPercentage__c &gt;  DiscountForTransfer__c, EmploymentExemptionCode__c ,  ExemptionForTransfer__c )</formula>
        <label>Exemption Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExemptionForTransfer__c</fullName>
        <description>This is the Banner Exemption code</description>
        <label>Exemption For Transfer</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpediteTranscriptEvaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedite Transcript Evaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalLeadContactControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Lead Contact Control</label>
        <referenceTo>ExternalLeadContactControl__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FastStartOTP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terms/ units per term / OTP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldRep__c</fullName>
        <label>Field Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinancialAidCase__c</fullName>
        <formula>HYPERLINK(&quot;/500/e?retURL=%2F500%2Fo&amp;def_account_id=&quot;&amp;Account.Id&amp;&quot;&amp;def_contact_id=&quot;&amp;StudentContact__r.Id&amp;&quot;&amp;def_CAREProfile__c_id=&quot;&amp;Id&amp;&quot;&amp;RecordType=012a0000001ZRnr&amp;ent=Case&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Df0000002MhY1&amp;id=015a000000235vL&quot;, &quot;Create A Case&quot;) , &quot;_blank&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Aid Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstEvalSent__c</fullName>
        <label>First Eval Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FullTimePartTimeCapabilities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full time or faster</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GoodBadLead__c</fullName>
        <inlineHelpText>Was this lead a bad lead?</inlineHelpText>
        <label>Good/Bad/Duplicate Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Good Lead</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GraduatedHighSchool__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is answered in the Application Form</description>
        <label>Graduated High School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasAssociates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the student has an eligible Associates degree to waive RA</description>
        <inlineHelpText>Does the student have an eligible Associates degree to waive RA?</inlineHelpText>
        <label>Has Associates?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasITCertorAssociates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that student has eligible IT Cert or Associates degree in IT to waive RA</description>
        <inlineHelpText>Does the student have an eligible IT Cert or Associates degree in IT to waive RA?</inlineHelpText>
        <label>Has IT Cert or Associates?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HoursPerWeekComputer__c</fullName>
        <label>Hours Per Week on a Computer</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HowSoonDoYouWantToStart__c</fullName>
        <label>How soon do you want to start?</label>
        <picklist>
            <picklistValues>
                <fullName>ASAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within a Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within six months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than a year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the CARE Profile Inactive</description>
        <inlineHelpText>This CARE Profile is Inactive.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntakeBy__c</fullName>
        <label>IntakeBy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InventoryPercentage__c</fullName>
        <description>Readiness Assessment - Inventory Percentage</description>
        <label>Inventory Percentage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>InventoryPoints__c</fullName>
        <description>Readiness Assessment - Inventory Points</description>
        <label>Inventory Points</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>Key that used to drive from the ADIM</description>
        <label>Key</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastCallDisposition__c</fullName>
        <label>Last Call Disposition</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastStatusDate__c</fullName>
        <label>Last Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LateAdd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late Add</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadGrade__c</fullName>
        <description>The grade that was given from the inquiry</description>
        <label>Lead Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadScore__c</fullName>
        <description>The score from the grading of the answers to the intake questions.</description>
        <inlineHelpText>The score from the grading of the answers to the intake questions.</inlineHelpText>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead_Provider_Response_Error__c</fullName>
        <description>Contains and errors that may have been returned by the Lead Provider when we sent our Lead Response to them.</description>
        <label>Lead Provider Response Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LearnAboutFinancialAid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Button is clicked from the online application and populated from the web services.</description>
        <label>Learn about Financial Aid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LearningResources__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Learning Resources / COS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyCARETransferEval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy CARE Transfer Eval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarketingProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Program</label>
        <referenceTo>CareProgramMiddleEarth__c</referenceTo>
        <relationshipLabel>CAREProfile</relationshipLabel>
        <relationshipName>CAREProfile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MarketingReferID__c</fullName>
        <description>The refer id field that is used by marketing as the original refer id for a lead</description>
        <label>Marketing Refer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketingSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Source</label>
        <referenceTo>MarketingSourceCode__c</referenceTo>
        <relationshipLabel>CARE Profiles</relationshipLabel>
        <relationshipName>CAREProfile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MathPercentage__c</fullName>
        <description>Readiness Assessment - Math percentage</description>
        <label>Math Percentage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MathPoints__c</fullName>
        <description>Readiness Assessment - Math Points</description>
        <label>Math Points</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaximumDegreeValue__c</fullName>
        <label>Maximum Degree Value</label>
        <summarizedField>StudentTranscript__c.DegreestoWaiveRA__c</summarizedField>
        <summaryForeignKey>StudentTranscript__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MentorRelationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mentor Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MilitaryCase__c</fullName>
        <formula>HYPERLINK(&quot;/500/e?retURL=%2F500%2Fo&amp;def_account_id=&quot;&amp;Account.Id&amp;&quot;&amp;def_contact_id=&quot;&amp;StudentContact__r.Id&amp;&quot;&amp;RecordType=012a0000001ZOGp&amp;ent=Case&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Df0000002MhY1&amp;id=015a00000038kEZ &quot;, &quot;Create A Case&quot;) , &quot;Military Case&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Military Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MilitaryScholarshipPriority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Military/Scholarship Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEAAcademyId__c</fullName>
        <description>The prospects NEA Academy Id number</description>
        <label>NEA Academy ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameAndPhone__c</fullName>
        <formula>StudentContact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NativeLanguageIsEnglish__c</fullName>
        <defaultValue>false</defaultValue>
        <description>self disclosed if english is their second language</description>
        <label>Native Language is English</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NeedPreReqs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Pre-Reqs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs__c</fullName>
        <label>Needs</label>
        <picklist>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Example</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desire for Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desire to Change Lives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Need IT Certifications</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>NextCallEligibleTime__c</fullName>
        <description>The date and time that this opportunity record will be eligible to contact again if the record has not reached a specific stage in the CAREforce intake process.</description>
        <label>Next Call Eligible Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NoExclusionFA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag for transcripts that cannot be excluded. A way for FA let the Transcript Evaluation team know that certain transcript(s) are not eligible for exclusion. This will also key Enrollment Counselors that these transcripts are not eligible for exclusion. [Transfer Institution &quot;No Exclusion-FA&quot;] Permission Set will add the ability to modify.</description>
        <inlineHelpText>A flag for transcripts that cannot be excluded. A way for FA let the Transcript Evaluation team know that certain transcript(s) are not eligible for exclusion. This will also key Enrollment Counselors that these transcripts are not eligible for exclusion.</inlineHelpText>
        <label>No Exclusion-FA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfTranscriptsExpected__c</fullName>
        <label>Number of Transcripts Expected</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NursingPrelicenusreId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>NursingPrelicenusreId</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this Opportunity record, to be used for data migration from a person account org to a non-person account org. Set as External Id in support of Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Orientation_First_of_Prior_Month__c</fullName>
        <description>This field will show the first day of the month prior to whatever is listed in the &apos;Anticipated Start Date&apos; (Close Date) field on the opportunity.  It is used to drive the workflow to send the student an orientation welcome email.</description>
        <label>Orientation - First of Prior Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OriginallyInquiry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines this opportunity as being created through the Inquiry form before it was used in a application form. Should not be visible to users. Referenced in the CAREInquiryRESTService and CAREApplicationRESTService APEX classes.</description>
        <label>Originally Inquiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutstandingAdmissionDocuments__c</fullName>
        <label>Outstanding Admission Documents</label>
        <summaryFilterItems>
            <field>StudentTranscript__c.TranscriptStatus__c</field>
            <operation>notEqual</operation>
            <value>Received, Updated, Excluded</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>StudentTranscript__c.DocumentType__c</field>
            <operation>equals</operation>
            <value>ROCT</value>
        </summaryFilterItems>
        <summaryForeignKey>StudentTranscript__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OutstandingTranscriptsOnBase__c</fullName>
        <label>Outstanding Transcripts OnBase</label>
        <summaryFilterItems>
            <field>StudentTranscript__c.TranscriptStatus__c</field>
            <operation>notEqual</operation>
            <value>Received, Updated, Not Expected, Excluded</value>
        </summaryFilterItems>
        <summaryForeignKey>StudentTranscript__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OutstandingTranscripts__c</fullName>
        <description>The Number of outstanding transcripts rolled up from the Previous Institution Child object</description>
        <inlineHelpText>The number of transcripts that are outstanding for this CARE Record</inlineHelpText>
        <label>Outstanding Transcripts</label>
        <summaryFilterItems>
            <field>StudentTranscript__c.TranscriptStatus__c</field>
            <operation>notEqual</operation>
            <value>Not Expected, Excluded</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>StudentTranscript__c.IndexedTotal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>StudentTranscript__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OutstandingTransferEvaluations__c</fullName>
        <description>Number of evaluations outstanding</description>
        <inlineHelpText>The Number of evaluations that are outstanding</inlineHelpText>
        <label>Outstanding Transfer Evaluations</label>
        <summaryFilterItems>
            <field>TransferEvaluation__c.EvaluationStatus__c</field>
            <operation>notEqual</operation>
            <value>Canceled,Sent,Not Eligible</value>
        </summaryFilterItems>
        <summaryForeignKey>TransferEvaluation__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OwnsComputerHomeOffice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Student owns a computer at either home or at the office</inlineHelpText>
        <label>Owns a Computer at home/office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCtest__c</fullName>
        <label>PCtest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <description>The PIDM which is unique in the WGU global scheme</description>
        <externalId>true</externalId>
        <label>PIDM</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PastGPA__c</fullName>
        <label>Past GPA</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISCOVER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MASTERCARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROMO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PersonalPageIdentifier__c</fullName>
        <description>This is for the personal page to store the ID to support the public personal page.</description>
        <label>Personal Page Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonalPageLink__c</fullName>
        <formula>&quot;http://my.wgu.edu/PersonalPage/&quot;&amp;PersonalPageIdentifier__c</formula>
        <label>Personal Page Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostingScoreId__c</fullName>
        <label>Posting Score Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostingSource__c</fullName>
        <label>Posting Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreEWBAppointmentDate__c</fullName>
        <label>Pre-EWB Appointment Date</label>
        <type>Date</type>
    </fields>
</CustomObject>